Fix login form alignment

--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -9,7 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height:100vh; 
+  height:100vh;
+  margin: auto;
 }
 
 input, label {
